<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_ubahprofile"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/main_tombol_keluar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/main_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_namaemail"
        android:layout_width="58dp"
        android:layout_height="18dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/main_namaemail"
        app:layout_constraintStart_toEndOf="@+id/tv_welcome"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_keluar"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/main_tombol_ubahProf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ubahprofile" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:text="@string/main_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_namaemail" />
</android.support.constraint.ConstraintLayout>