<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginapp.LoginActivity">

    <TextView
        android:id="@+id/tv_masuk"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto"
        android:text="@string/login_akun"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_emailmasuk"
        android:layout_width="239dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_masuk" />

    <EditText
        android:id="@+id/et_katasandi_masuk"
        android:layout_width="239dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_emailmasuk" />

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="161dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:background="@color/WarnaTombol"
        android:fontFamily="@font/roboto"
        android:text="@string/login_tombol"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_katasandi_masuk" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="80dp"
        android:text="@string/login_tanyaaku"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_masuk" />

    <TextView
        android:id="@+id/tv_daftar"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:onClick="ClickDaftarpg"
        android:text="@string/login_daftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btn_masuk" />

    <TextView
        android:id="@+id/tv_lupakatasandi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/login_lupakatasandi"
        android:onClick="ClickResetPg"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>