<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerapp.RegisterActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto"
        android:text="@string/register_akun"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="239dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/register_nama_akun"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="239dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nama" />

    <EditText
        android:id="@+id/et_katasandi"
        android:layout_width="239dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_konfirmasi"
        android:layout_width="239dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/register_konfirmasipassword"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_katasandi" />

    <Button
        android:id="@+id/bt_reg"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/register_akun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_konfirmasi" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="64dp"
        android:fontFamily="@font/roboto"
        android:text="@string/register_tanyaakun"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/login_akun"
        android:onClick="ClickLoginpg"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>